2003-11-15  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opgprof.cpp: simplify a bit cg handling, we don't need to know
	  if we retrieved some cg files since the profile_t will be empty
	  in this case

2003-11-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile.h: iterator::vma() must return the full key not only
	  an unsigned int.
	* pp/opgprof.cpp: implement merging of cg files.

2003-11-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_spec.cpp:
	* libpp/profile_spec.h:
	* pp/opannotate_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport_options.cpp: filter call graph samples files

2003-11-14  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_mangling.c: oops, it's better to really open the cg file

	* daemon/opd_sfile.c:
	* daemon/opd_stats.c:
	* daemon/opd_stats.h:
	* daemon/liblegacy/opd_24_stats.c:
	* daemon/liblegacy/opd_24_stats.h:
	* daemon/liblegacy/opd_proc.c: log sample lost due to sample file open
	  failure

2003-11-15  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/liblegacy/opd_parse_proc.c: always provide an image name
	  for parsed process in /proc

2003-11-15  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml:
	* libop/op_cpu_type.c: s/hammer/AMD64 processors/ for user visible
	  name.

2003-11-13  John Levon  <levon@movementarian.org>

	* libutil/op_file.h:
	* libutil/op_file.c: remove op_c_dirname(),
	op_relative_to_absolute_path(), op_is_directory(),
	op_follow_link(), in favour of using realpath(3)

	* libutil/tests/file_tests.c: fixes for above changes

	* libutil++/file_manip.h:
	* libutil++/file_manip.cpp: changes from above. Add
	op_realpath().

	* libutil++/tests/file_manip_tests.cpp: changes from 
	above.

	* daemon/oprofiled.c:
	* daemon/liblegacy/opd_parse_proc.c:
	* gui/oprof_start_util.cpp:
	* libpp/locate_images.cpp:
	* libpp/profile_spec.cpp:
	* pp/opannotate.cpp: changes from above

2003-11-12  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.8cvs
