@@ -34,6 +34,9 @@ public:
 	 * profile_t - construct an empty  profile_t object
 	 */
 	profile_t();
+
+	/// return true if no sample file has been loaded
+	bool empty() const { return !file_header.get(); }
  
 	/// return the header of the last opened samples file
 	opd_header const & get_header() const {
