@@ -1,3 +1,9 @@
+2003-11-23  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/profile.h:
+	* pp/opgprof.cpp: oops a simplify a bit too cg handling in my last
+	  patch, it was segfaulting each time no cg file was found...
+
 2003-11-15  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* pp/opgprof.cpp: simplify a bit cg handling, we don't need to know
